5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1637_2443.log
== SUBMITION (2019-04-09 11:44:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * r - x))/3
	
print(mensagem)
-- EXECUTION TIME:
0.156037
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5943800302165
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:44:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * r - x))/3
	
print(mensagem)
-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:44:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * r - x))/3
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.199853
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:44:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * r - x))/3
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.139804
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:44:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * r - x))/3
	
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:44:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = (pi * (x)**2 * (3 * raio - x))/3
	
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:45:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = ((pi * (x)**2) * (3 * raio - x))/3
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.195205
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:45:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = (4 * pi * (raio)**3)/3
	
else:
	mensagem = ((pi * (x)**2) * (3 * raio - x))/3
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.151001
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
if(num == 1):
	mensagem = ((4 * pi) * (raio)**3)/3
	
else:
	mensagem = ((pi * (x)**2) * (3 * raio - x))/3
	
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.190844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.116048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.150035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.109662
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.14879
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.134436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.110511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.16158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.267318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.117815
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.310103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.170549
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.333962
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.249014
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.196369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.369702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.236093
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.350204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.186044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.381265
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.283617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.265563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.2098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.17906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.155157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.121557
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.0926201
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.0973382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.139854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.148959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.181941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.178962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.189728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.160257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.1281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.0945339
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.10237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.0965919
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.194926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.219839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.17994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.179204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.159818
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.1772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.247759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.18739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.228687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.245221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.25191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
raio = float(input("Raio: "))
x = float(input("Altura da coluna de ar: "))
num = int(input("opcao: (1/2)"))
vesf = (4 * pi * (r)**3)/3
vcalot = (pi * (x)**2 * (3*r - x))/3

if(num == 1):
	mensagem = vesf
	
else:
	mensagem = vesf - vcalot 
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.25952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2443/main.py", line 8, in <module>
    vesf = (4 * pi * (r)**3)/3
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:46:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Qual o raio? "))
x = float(input("Altura: "))
opcao = int(input("Qual? (1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3

if(opcao == 2):
	mens = vesf - vcal
	
else:
	mens = vcal
	
print(round(mens, 4))	
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:46:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Qual o raio? "))
x = float(input("Altura: "))
opcao = int(input("Qual? (1/2)"))
vesf = (4*pi*(r)**3)/3
vcal = (pi*((x)**2)*(3*r - x))/3

if(opcao == 2):
	mens = vesf - vcal
	
else:
	mens = vcal
	
print(round(mens, 4))	
-- EXECUTION TIME:
0.133301
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
